# bot

./: CMakeLists.txt  README.md  TO DO.md  main.py  package.xml  smol notes.md
app_msgs/: CMakeLists.txt  package.xml
applicate_bot/: package.xml  setup.cfg  setup.py
applicate_bot/applicate_bot/: app_bot.py  bot.py  bot_control.py  final_test.py  func_reqs.md  motor_driver.py  motor_gui.py  nav_func.py  nav_func_basic.py  nav_func_key.py  sample_bot_widget.py
applicate_bot/applicate_bot/backups/: app_bot_new.py  app_bot_old.py
applicate_bot/applicate_bot/bot/: final_test.py  novabot.py  predef.py  simplebot  simplebot.py  test.py  test_simple.py
applicate_bot/applicate_bot/bot/bags/data2025225234417/: metadata.yaml
applicate_bot/applicate_bot/bot/bags/data2025225234544/: metadata.yaml
applicate_bot/applicate_bot/bot/bags/data2025225234734/: metadata.yaml
applicate_bot/applicate_bot/bot/bags/data202522523475/: metadata.yaml
applicate_bot/applicate_bot/bot/bags/data2025225234940/: metadata.yaml
applicate_bot/applicate_bot/bot/bags/data2025225235114/: metadata.yaml
applicate_bot/applicate_bot/bot/old_bots/: bckp_SB.py  bot.py  test_simple.py
applicate_bot/applicate_bot/comms/: command_server.py  logger.py  navlogs.py  notification.py  py_serv
applicate_bot/applicate_bot/gui/: gui.py  gui_reqs.md  guiros.py
applicate_bot/applicate_bot/gui/pre_ui/: MyGUI.py  control.py  ui_func.py
applicate_bot/applicate_bot/gui/real_ui/: MyGUI.py  confirm.py  control-with-weight-status.py  control.py  main.py  password.py  status.py
applicate_bot/applicate_bot/modules/: audio.py  lgpio sample.py  lgpio_sample.py  load.py  loadtest.py  lock.py  modules.py  peripherals.py  ui status load sensor.py
applicate_bot/applicate_bot/modules/HX711_LGPIO/: .gitignore  LICENSE  README.md
applicate_bot/applicate_bot/motorsample/: motor_driver.py  motor_gui.py
applicate_bot/applicate_bot/navigation/: modded_robot_navigator.py  modded_robot_navigator_robloc.py  nav_func.py  nav_func_basic.py  robot_navigator.py
applicate_bot/applicate_bot/sampleui/: sample_bot_widget.py  sample_bot_widget.ui  sample_bot_widget_ui.py
applicate_bot/applicate_bot/teleop/: key_input.py  nav_func_key.py  nav_func_manual.py  navlog.py  position_checker.py  roller.py
applicate_bot/applicate_bot_msgs/: package.xml
applicate_bot/launch/: bot_start.launch.py
applicate_bot_msgs/: CMakeLists.txt
config/: mapper_params_online_async.yaml  my_controllers.yaml  twist_mux.yaml
control/: path_topic_pub.cpp
description/: gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_core_actual.xacro  robot_core_prac.xacro  robot_urdf.xacro  ros2_control.xacro
description/meshes/: model-wheel_part_curve.dae
implement_bot/: CMakeLists.txt  bot_system.xml  diffbot_system.xml  package.xml
implement_bot/config/: bot_controller_params .yaml  bot_controller_params.yaml  controller_params.yaml  ekf_amcl_sim.yaml  ekf_params.yaml  full_navigation_params.yaml  gazebo_controller_params.yaml  ldlidar.yaml  mapper_params_online_async.yaml  nav_params.yaml  navigation_params.yaml  slam_toolbox.yaml  twist_mux.yaml
implement_bot/config/old_configs/: bkcp_full_nav_params.yaml  ekf.yaml  ekf_simple.yaml  gazebo_params.yaml  nav_params_no_amcl.yaml
implement_bot/config/rviz/: nav_rviz.rviz  rviz.rviz
implement_bot/description/: base_actual.xacro  base_prac.xacro  base_properties.xacro  gazebo_control.xacro  main_urdf.xacro  old_gazebo_control.xacro  ros2_control.xacro  sensors.xacro
implement_bot/description/meshes/: model-chassis_part.dae  model-load_part.dae  model-top_part.dae  model-wheel_part_curve.dae  model-wheel_part_shaft.dae  model-wheel_part_simple.dae
implement_bot/description/old_xacros/: base_actual (4wheel).xacro  gazebo_control.xacro
implement_bot/hardware/: bot_system.cpp  diffbot_system.cpp
implement_bot/hardware/include/bot_system/: bot_system.hpp  esp_comms.hpp  imu_sensor.hpp  ir_sensor.hpp  wheel.hpp
implement_bot/hardware/include/diffbot_system/: diffbot_system.hpp  esp_comms.hpp
implement_bot/import/: localization.launch.py  localization_launch.py  localization_robloc.launch.py  modded_localization.py  modded_navigation.py
implement_bot/import/behavior_trees/: follow_dynamic_point.xml  my_bt.xml  navigate_through_poses.xml  navigate_to_pose.xml  navigate_to_pose_and_pause_near_goal_obstacle.xml  navigate_to_pose_w_replanning_goal_patience_and_recovery.xml  navigate_to_pose_with_consistent_replanning_and_if_path_becomes_invalid.xml
implement_bot/launch/: bot.launch.py  bot_launch.py  bot_parts.launch.py  common_roscoms.md  controller.launch.py  ekf.launch.py  full_navloc.launch.py  loc.launch.py  localization_launch.py  main.launch.py  main_launch.py  map.launch.py  nav.launch.py  navloc.launch.py  navloc_launch.py  navloc_robloc.launch.py  rsp.launch.py  self_loc.launch.py  sensors.launch.py  sensors_launch.py  server.py  sim.launch.py  sim_launch.py  states.launch.py  states_launch.py  visuals.launch.py  visuals_launch.py
implement_bot/launch/old_launches/: adv.launch.py  bot.launch.py  common_roscoms.md  full_navloc.launch.py  old_control.launch.py  sim.launch.py
implement_bot/launch/unused launches/: common_roscoms.md
implement_bot/maps/: empty.pgm  empty.yaml  keepout_map.pgm  keepout_map.yaml  masked_map.pgm  masked_map.yaml  modded_actual.pgm  modded_actual.yaml  new.pgm  new.yaml  revised_actual.pgm  revised_actual.yaml
implement_bot/maps/new old maps/: fixed_map.yaml  keepout_map.yaml  modded_actual.data  real_map.pgm  real_map.yaml
implement_bot/maps/old_maps/: map_save.pgm  map_save.yaml  map_save2.pgm  map_save2.yaml  map_serial.data  map_serial2.data  mm.yaml  new.data
implement_bot/src/: server_publisher.cpp
implement_bot/worlds/: actual_unfinal.world  botworld.world
implement_bot/worlds/world builds/bot_world/: model.config  model.sdf
implement_bot/worlds/world builds/bot_world.world/: model.config  model.sdf
launch/: launch_sim.launch.py  roscoms.py  rsp.launch.py  twistkey.py
worlds/: bot.rviz
(+19 files in other folders)
